# RemoteShell

./: CMakeLists.txt
Application/: ShellServer.cpp
Cxx/: Assert.cpp  Assert.hpp  Unused.hpp
ShellClient/: Connect.cpp  Connect.hpp  Main.cpp  MultiplexIOLoop.cpp  MultiplexIOLoop.hpp
ShellServer/: AcceptClientsLoop.cpp  AcceptClientsLoop.hpp  Bind.cpp  Bind.hpp  Main.cpp  ProcessClientAsync.cpp  ProcessClientAsync.hpp  ProcessClientsLoop.cpp  ProcessClientsLoop.hpp
Sources/: ShellClient.cpp
System/: Dup2.cpp  Dup2.hpp  FileDescriptor.cpp  FileDescriptor.hpp  GetAddrInfo.cpp  GetAddrInfo.hpp  GetAddrInfoErrorCategory.cpp  GetAddrInfoErrorCategory.hpp  GetAddrInfoErrors.cpp  GetAddrInfoErrors.hpp  GetNameInfo.cpp  GetNameInfo.hpp  IO.cpp  IO.hpp  Listen.cpp  Listen.hpp  Shutdown.cpp  Shutdown.hpp  Socket.cpp  Socket.hpp  SystemCall.cpp  SystemCall.hpp
